samples/_failures_safe/1761129706_2d97a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f245e575.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_f245e575.c:173:9: error: expected declaration or statement at end of input
  173 |         case TOKEN_STRING: printf("STRING"); break;
      |         ^~~~
./samples/SAFE/__tmp_f245e575.c:173:9: error: expected declaration or statement at end of input
